# rp-picow-examples

./: .gitignore  Cargo.toml  README.md  memory.x  run-automount.sh
.cargo/: config.toml
src/: WIFI_PASSWORD.txt  WIFI_SSID.txt  lib.rs  logging.rs  network.rs  radio.rs
