[package]
name = "rp-picow-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3.0" }
embassy-sync = { version = "0.6.1" }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.4.0" }
embassy-rp = { version = "0.3.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
    "binary-info",
] }
embassy-usb = { version = "0.4.0" }
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-net-wiznet = { version = "0.2.0" }
embassy-futures = { version = "0.1.1" }
embassy-usb-logger = { version = "0.4.0" }
cyw43 = { version = "0.3.0", features = ["firmware-logs"] }
cyw43-pio = { version = "0.3.0" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
rp2040-hal = "0.11.0"
log = "0.4"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand = { version = "0.8.5", default-features = false }
heapless = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"
